fix overflow

--- a/src/components/alcohol/alcohol.scss
+++ b/src/components/alcohol/alcohol.scss
@@ -6,7 +6,7 @@
   margin: $margin-double;
   border-radius: $border-radius;
   overflow: hidden;
-  max-height: 72px;
+  max-height: 70px;
   background: transparent;
   position: relative;
 
